加入'全文完'

--- a/_posts/php/2015-06-09-ci-smarty.md
+++ b/_posts/php/2015-06-09-ci-smarty.md
@@ -124,6 +124,8 @@ $this->ci_smarty->display('test/test.tpl');
 
 [CodeIgniter+Smarty - Perfect Together]
 
+（全文完）
+
 [这里]: https://github.com/smarty-php/smarty/archive/v3.1.24.tar.gz
 
 [视图文件的 PHP 替代语法]: http://codeigniter.org.cn/user_guide/general/alternative_php.html
