--- a/_posts/php/2015-10-01-php-json.md
+++ b/_posts/php/2015-10-01-php-json.md
@@ -4,9 +4,161 @@ title:  PHP与JSON的一些故事
 categories: [php]
 ---
 
+对接触过PHP和JSON（数据格式）的人来说，PHP处理JSON的方式无非是两种：第一，使用json_encode()进行JSON的解析；第二，使用json_decode()进行json的反解析。当然，这篇文章除了介绍json_encode()和json_decode()之外还会介绍一些和JSON相关的别的东西。
+
+## JSON简介 ##
+
+所有技术名词的解析，只有一个地方可以给出最为详尽的阐述。这个地方就是[这里-维基百科]。
+
+## JSON优势 ##
+
+在XML，YAML和JSON这三种数据格式之前说JSON的优势，可能只能说JSON被各种语言的支持更好。其它的优势似乎都不是很明显，个人觉得。
+
+## 使用json_encode()处理数据 ##
+
+### 处理索引数组 ###
+
+**测试源代码**
+
+```php
+$arr = array('a', 'b', 'c', 'd', 'e');
+echo json_encode($arr);
+```
+
+**输出结果**
+
+```json
+["a","b","c","d","e"]
+```
+
+注意：在json中'[]'代表的是一个数组。
+
+### 处理关联数组 ###
+
+**测试源代码**
+
+```php
+$arr = array('a'=>'test1', 'b'=>'test2', 'c'=>'test3', 'd'=>'test4', 'e'=>'test5');
+echo json_encode($arr);
+```
+
+**输出结果**
+
+```json
+{"a":"test1","b":"test2","c":"test3","d":"test4","e":"test5"}
+```
+
+注意：在json中'{}'代表的是一个对象。因为js之中没有关联数组的概念，所以PHP的关联数组经过转换就变成了js中的对象。
+
+### 处理对象 ###
+
+**测试源代码**
+
+```php
+class Test {
+    public $name;
+    public $age;
+    public $sex;
+}
+
+$test = new Test();
+$test->name = 'searchpcc';
+$test->age = 23;
+$test->sex = 'nan';
+echo json_encode($test);
+
+```
+
+**输出结果**
+
+```php
+{"name":"searchpcc","age":23,"sex":"nan"}
+```
+
+## 使用json_decode()处理数据 ##
+
+一般，只要json中有对象的标识"{}"，使用json_decode()进行转换之后都是对象。
+
+**测试源代码**
+
+```php
+$json = '{"a":"test1","b":"test2","c":"test3","d":"test4","e":"test5"}';
+print_r(json_decode($json));
+```
+
+**输出结果**
+
+```
+stdClass Object
+(
+    [a] => test1
+    [b] => test2
+    [c] => test3
+    [d] => test4
+    [e] => test5
+)
+```
+
+但是！有两种形式除外。这两种形式生成新的数组。第一种是json数据本身没有"{}"只有"[]"；第二种就行强行将json_decode()的第二个参数设置为True。
 
 
+### 第一种 ###
+
+**测试源代码**
+
+```php
+$json = '["a","b","c","d","e"]';
+print_r(json_decode($json));
+```
+
+**输出结果**
+
+```
+Array
+(
+    [0] => a
+    [1] => b
+    [2] => c
+    [3] => d
+    [4] => e
+)
+
+```
+
+### 第二种 ####
+
+**测试源代码**
+
+```php
+$json = '{"a":"test1","b":"test2","c":"test3","d":"test4","e":"test5"}';
+print_r(json_decode($json, true));
+```
+
+**输出结果**
+
+```
+Array
+(
+    [0] => a
+    [1] => b
+    [2] => c
+    [3] => d
+    [4] => e
+)
+```
+
+## 写在最后 ##
+
+其实主要是学会用两个函数，理解两个概念。函数分别是json_encode()和json_decode()，概念是js没有关联数组只有索引数组。所以关联数组json_encode()之后到了json里面就是对象。最后，提供几个有效的json工具。
+
+[jsoneditoronline]
+
+[bejson]
 
 （全文完）
 
+
+[这里-维基百科]:https://zh.wikipedia.org/zh/JSON
+[jsoneditoronline]:http://www.jsoneditoronline.org/
+[bejson]:http://www.bejson.com/
 
