修复文章内容

--- a/_posts/php/2015-11-14-php-shell.md
+++ b/_posts/php/2015-11-14-php-shell.md
@@ -64,7 +64,7 @@ system($shell) 直接输出结果。输出的类型是数组。
 ```php
 <?php
 //文件名test.php
-exec("ls -al", $result);
+$result = exec("ls -al");
 print_r($result);
 ?>
 ```
@@ -72,13 +72,11 @@ print_r($result);
 ### 输出结果 ###
 
 ```shell
-Array
-(
-    [0] => total 8
-    [1] => drwxr-xr-x  3 searchpcc  staff  102 11 14 15:30 .
-    [2] => drwxr-xr-x  9 searchpcc  staff  306 11 14 15:11 ..
-    [3] => -rw-r--r--  1 searchpcc  staff   54 11 14 15:30 test.php
-)
+total 8
+drwxr-xr-x  3 searchpcc  staff  102 12 13 12:41 .
+drwxr-xr-x  6 searchpcc  staff  204 12  1 11:18 ..
+-rw-r--r--  1 searchpcc  staff   57 12 13 12:41 test.php
+-rw-r--r--  1 searchpcc  staff   57 12 13 12:41 test.php%
 ```
 
 ##  参考资料 ##
